--- a/Simple.API/Simple.API/Simple.API.csproj
+++ b/Simple.API/Simple.API/Simple.API.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Simple.Api.Application\Simple.Api.Application.csproj" />
+  </ItemGroup>
+
 </Project>
