--- a/Simple.API/Simple.API/appsettings.json
+++ b/Simple.API/Simple.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Conn": "Server=localhost;Initial Catalog=DB_MOVIE;User Id=movieuser;Password=movie123;Persist Security Info=False;MultipleActiveResultSets=True"
+  }
 }
